# cpp-chess-game

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/board/: CMakeLists.txt  board-movements.cpp  board-movements.h  board.h  notation.cpp  notation.h  squares.h
src/chaos/: CMakeLists.txt  chaos.cpp  display-pieces.cpp  display-pieces.h
src/demo/: CMakeLists.txt  main.cpp
src/demo/chaos/: CMakeLists.txt  chaos.cpp  chaos.h
src/demo/game/: CMakeLists.txt  display-board.cpp  display-board.h  display-pieces.cpp  player.cpp  player.h  run-game.cpp  run-game.h
src/demo/player/: CMakeLists.txt  player.cpp
src/engine/: CMakeLists.txt
src/engine/ai/: CMakeLists.txt  chess-ai.cpp  chess-ai.h  is-defeated.cpp  make-move.cpp  run-simulation.h  score-list.h  score.cpp  score.h  simulation-utils.h
src/engine/board/: CMakeLists.txt  board-edges.cpp  board-edges.h  board-movements.cpp  board-movements.h  board.h  iterator-bitfield.h  notation.cpp  notation.h  squares.h
src/engine/pieces/: CMakeLists.txt  piece-embraced-squares-mask.h
src/engine/pieces/actions/: CMakeLists.txt  army-init.cpp  calc-moves.cpp  create-embraced-squares-mask.cpp  handle-special-movement.cpp  move-piece.cpp  piece-actions.h  piece-api.cpp  piece-api.h  piece-update.cpp  piece-update.h
src/engine/pieces/pieces/: army.h  pieces-color.cpp
src/engine/pieces/types/: CMakeLists.txt  army.cpp  army.h  color.h  p-king.cpp  piece-baseclass.h  piece-bishop.cpp  piece-bishop.h  piece-king.cpp  piece-king.h  piece-rock.cpp  piece-rock.h  piece-type.h  piece.h  pieces-color.h  pieces.h  update-linear-movement.h
src/engine/pieces/types/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rock.cpp
src/engine/pieces/types/utils/: stack-vector.h
src/main/: main.cpp
src/pieces/: CMakeLists.txt  aggregator-positions.cpp  aggregator-positions.h  all-piece-positions.cpp  all-piece-positions.h  army.cpp  army.h  iterator-bitfield.h  piece-api.cpp  piece-api.h  piece-embraced-squares-mask.cpp  piece-manager.h  piece-type.cpp  piece-type.h  piece-update.cpp  piece-update.h  piece.h  pieces-color.cpp  pieces-color.h  stack-vector.h  update-piece-attackable.cpp  update-piece-attackable.h
src/pieces/pieces/: CMakeLists.txt  piece-bishop.cpp  piece-bishop.h  piece-king.cpp  piece-king.h  piece-rock.cpp  piece-rock.h  piece.h
src/player/: CMakeLists.txt  behaviour.cpp  behaviour.h  interface-player-behaviour.h  player.cpp  player.h
src/player-behaviour/: CMakeLists.txt  interface-player-behaviour.cpp  interface-player-behaviour.h
src/player-behaviour/ai/: CMakeLists.txt  behaviour-ai.cpp  behaviour-ai.h
src/player-behaviour/human/: CMakeLists.txt  behaviour-human.cpp  behaviour-human.h
test/: CMakeLists.txt
test/_helper/: CMakeLists.txt  create-army-list.cpp  display.cpp  test-helper.h
test/board/: CMakeLists.txt  test_board.cpp  test_movements.cpp  test_notation.cpp
test/chaos/: CMakeLists.txt  test_chaos.cpp
test/engine/: CMakeLists.txt
test/engine/ai/: CMakeLists.txt  chess-riddle-tests.cpp  test-chess-ai.cpp
test/engine/board/: CMakeLists.txt  test-board-edge-masks.cpp  test-board-movements.cpp  test-board-notation.cpp
test/engine/piece/: CMakeLists.txt
test/engine/piece/actions/: CMakeLists.txt  test-calc-moves.cpp  test-castling.cpp  test-init-army.cpp  test-move-piece.cpp  test-piece-embraced-sqrs-mask.cpp
test/engine/piece/types/: CMakeLists.txt  test-piece-bishop.cpp  test-piece-king.cpp  test-piece-knight.cpp  test-piece-pawn.cpp  test-piece-queen.cpp  test-piece-rock.cpp
test/piece/: CMakeLists.txt  test-piece-api--calc-moves.cpp  test-piece-api--init-army.cpp  test-piece-api--move-piece.cpp  test-piece-embraced-sqrs-mask.cpp  test-piece-update.cpp
test/piece/pieces/: CMakeLists.txt  test-piece-bishop.cpp  test-piece-king.cpp  test-piece-rock.cpp
tools/: .clang-format  .clang-tidy
tools/cmake/build-targets/: clang-format.cmake  clang-tidy.cmake  gtest.cmake
